<resources>
    <string name="app_name">Puzzzle</string>
    <string name="field_size">Field dimensions</string>
    <string name="x3x3" translatable="false">3x3</string>
    <string name="x4x4" translatable="false">4x4</string>
    <string name="x5x5" translatable="false">5x5</string>
    <string name="x6x6" translatable="false">6x6</string>
    <string name="add_image">Add image</string>
    <string name="take_photo">Take photo</string>
    <string name="from_gallery">Choose from the gallery</string>
    <string name="photo_dialog_title">Add image</string>
    <string name="permission_read_denied">Read internal storage permission is denied</string>
    <string name="permission_camera_denied">Camera permission is denied</string>
    <string name="show_image">Show image</string>
    <string name="number_of_moves">Moves count:</string>
    <string name="time">Time:</string>
    <string name="show_hide_numbers">Show/hide numbers</string>
    <string name="error">Error:</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
