<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:title="@string/field_size"
          android:enabled="false"
          app:showAsAction="never"/>
    <group
        android:id="@+id/field_size"
        android:checkableBehavior="single"
        >
        <item android:title="@string/x3x3"
              android:id="@+id/x3x3"
              app:showAsAction="never"/>
        <item android:title="@string/x4x4"
              android:id="@+id/x4x4"
              app:showAsAction="never"/>
        <item android:title="@string/x5x5"
              android:id="@+id/x5x5"
              app:showAsAction="never"/>
        <item android:title="@string/x6x6"
              android:id="@+id/x6x6"
              app:showAsAction="never"/>
    </group>
    <item android:title="@string/add_image"
          app:showAsAction="always"
          android:icon="@drawable/ic_add_a_photo"
          android:id="@+id/add_image"/>

</menu>